More styling done the sections and id's given to section child items from different pages

--- a/contact.html
+++ b/contact.html
@@ -25,40 +25,40 @@
         <!--Section 1-->
         <div class="gridContainer">
             <section class="gridSection1">
-                <div>
+                <div id="phone">
                     <i class="fas fa-phone-alt"></i>
                 </div>
-                <div>
+                <div id="phoneMe">
                     <h3>You can call me!</h3>
                     <p>0862454647</p>
                 </div>
             </section>
             <!--Section 2-->
             <section class="gridSection2">
-                <div>
+                <div id="email">
                     <i class="fas fa-envelope"></i>
                 </div>
-                <div>
+                <div id="emailMe">
                     <h3>You can email me!</h3>
                     <p>ptrollip@gmail.com</p>
                 </div>
             </section>
             <!--Section 3-->
             <section class="gridSection3">
-                <div>
+                <div id="socialMe">
                     <i class="fab fa-linkedin"></i>
                 </div>
-                <div>
+                <div id="findMe">
                     <h3>Find me on LinkedIn</h3>
                     <p><a href="https://www.linkedin.com/in/patrick-trollip-04765095/">My LinkedIn</a></p>
                 </div>
             </section>
             <!--Section 4-->
             <section class="gridSection4">
-                <div>
+                <div id="github">
                     <i class="fab fa-github-square"></i>
                 </div>
-                <div>
+                <div id="myGithub">
                     <h3>Github profile</h3>
                     <p><a href="https://github.com/Patoman90">Patrick's github</a></p>
                 </div>
