--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </section>
             <!--Section 2-->
             <section class="gridSection2">
-                <h3>Information</h3>
+                <h3>Background:</h3>
                 <p>
                     I am a graduate Fullstack web developer who studied at code institute. I have hands on experience using modern web technologies like
                     <em>HTML5</em>, <em>CSS3</em> and <em>ECMA script versions 5 and 6</em>. I have covered the frontend, backend of web development. I strive to 
