--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@
         <!--Section 1-->
         <div class="gridContainer">
             <section class="gridSection1">
-                <div id="phone">
-                    <i class="fas fa-phone-alt"></i>
+                <div>
+                    <i id="phone" class="fas fa-phone-alt"></i>
                 </div>
                 <div id="phoneMe">
                     <h3>You can call me!</h3>
