Styled sections 1 and 2 of skills.html and modified styles in style.css accordingly.

--- a/skills.html
+++ b/skills.html
@@ -25,10 +25,10 @@
         <div class="gridContainer">
             <!--Section 1-->
             <section class="gridSection1">
-                <div>
+                <div id="FrontEndTechImg">
                     <img src="Assets\frontend.png" alt="Image of hypertext markup language 5 icon, cascading stylesheets 3 icon, javascript icon side by side">
                 </div>
-                <div>
+                <div id="FrontEndTechInfo">
                     <h2>Front-end skills</h2>
                     <ul>
                         <li>
@@ -48,10 +48,10 @@
             </section>
             <!--Section 2-->
             <section class="gridSection2">
-                <div>
+                <div id="BackEndTechImg">
                     <img src="Assets\backend.png" alt="Image of python3 and mongo database being intergrated together">
                 </div>
-                <div>
+                <div id="BackEndTechInfo">
                     <h2>Back-end skills</h2>
                     <ul>
                         <li>
@@ -75,10 +75,10 @@
             </section>
             <!--Section 3-->
             <section class="gridSection3">
-                <div>
+                <div id="">
                     <img src="Assets\frameworks.png" alt="Image of frameworks like Angular, fontawesome and Bootstrap 4">
                 </div>
-                <div>
+                <div id="">
                     <h2>Frameworks</h2>
                     <ul>
                         <li>
@@ -106,10 +106,10 @@
             </section>
             <!--Section 4-->
             <section class="gridSection4">
-                <div>
+                <div id="">
                     <i class="fas fa-graduation-cap"></i>
                 </div>
-                <div>
+                <div id="">
                     <h2>Other skills, tools & qualifications</h2>
                     <ul>
                         <li>
