Styled section 3 of skills.html and added id's accordingly.

--- a/skills.html
+++ b/skills.html
@@ -75,10 +75,10 @@
             </section>
             <!--Section 3-->
             <section class="gridSection3">
-                <div id="">
+                <div id="FrameworkImg">
                     <img src="Assets\frameworks.png" alt="Image of frameworks like Angular, fontawesome and Bootstrap 4">
                 </div>
-                <div id="">
+                <div id="FrameworkInfo">
                     <h2>Frameworks</h2>
                     <ul>
                         <li>
