--- a/skills.html
+++ b/skills.html
@@ -106,10 +106,10 @@
             </section>
             <!--Section 4-->
             <section class="gridSection4">
-                <div id="">
+                <div id="otherSkillsIcon">
                     <i class="fas fa-graduation-cap"></i>
                 </div>
-                <div id="">
+                <div id="otherSkillsInfo">
                     <h2>Other skills, tools & qualifications</h2>
                     <ul>
                         <li>
