Added id's and div tags to the projects.html page for styling. I added intial styles to all sections for portfoilio page.

--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="CSS\style.css">
+    <script src="https://kit.fontawesome.com/6f3658f931.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Top page section-->
@@ -24,40 +25,81 @@
         <div class="gridContainer">
             <!--Section 1-->
             <section class="gridSection1">
-                <h2>Mixed messages Project</h2>
-                <a href="https://patoman90.github.io/MixedMessagesProject/">View project</a>
-                <p>This project is one that that generates content when a user interacts with the single page site.</p>
+                <div id="projectIconSect1">
+                    <i id="projectIconSect1" class="fa fa-code" aria-hidden="true"></i>
+                </div>
+                <div id="projectA">
+                    <h2>Mixed messages Project</h2>
+                    <ul>
+                        <li><a href="https://patoman90.github.io/MixedMessagesProject/">Click to view project</a></li>
+                        <p>This project is one that that generates content when a user interacts with the single page site.</p>
+                    </ul> 
+                </div>
             </section>
             <!--Section 2-->
             <section class="gridSection2">
-                <h2>Cyber sappers ecommerce site</h2>
-                <a href="https://patricks4thmilestoneproject.herokuapp.com/">View site</a>
-                <p>This project was made to represent a cyber security product and services site that takes payments and user input and saves it to a database.</p>
+                <div id="projectIconSect2">
+                    <i class="fa fa-code" aria-hidden="true"></i>
+                </div>
+                <div id="projectB">
+                    <h2>Cyber sappers ecommerce site</h2>
+                    <ul>
+                        <li><a href="https://patricks4thmilestoneproject.herokuapp.com/">Click to view project</a></li>
+                        <p>This project was made to represent a cyber security product and services site that takes payments and user input and saves it to a database.</p>
+                    </ul>
+                </div>
             </section>
             <!--Section 3-->
             <section class="gridSection3">
-                <h2>Farmer vs aliens html game.</h2>
-                <a href="https://patoman90.github.io/Milestone-project-2/"></a>
-                <p>This was the first game I programmed and made for a Milestone project after just completing javascript fundamentals.</p>
+                <div id="projectIconSect3">
+                    <i class="fa fa-code" aria-hidden="true"></i>
+                </div>
+                <div id="projectC">
+                    <h2>Farmer vs aliens html game.</h2>
+                    <ul>
+                        <li><a href="https://patoman90.github.io/Milestone-project-2/">Click to view project</a></li>
+                        <p>This was the first game I programmed and made for a Milestone project after just completing javascript fundamentals.</p>
+                    </ul>
+                </div>
             </section>
             <!--Section 4-->
             <section class="gridSection4">
-                <h2>Tennis game</h2>
-                <a href="https://patoman90.github.io/TennisGame/Tennis.html"></a>
-                <p>This tennis game is one I made using a tutorial to practice javascript coding.</p>
+                <div id="projectIconSect4">
+                    <i class="fa fa-code" aria-hidden="true"></i>
+                </div>
+                <div id="projectD">
+                    <h2>Tennis game</h2>
+                    <ul>
+                        <li><a href="https://patoman90.github.io/TennisGame/Tennis.html">Click to view project</a></li>
+                        <p>This tennis game is one I made using a tutorial to practice javascript coding.</p>
+                    </ul>
+                </div>
             </section>
             <!--Section 5-->
             <section class="gridSection5">
-                <h2>Locks and security database site</h2>
-                <a href="https://locks-data-centric.herokuapp.com/">View site here.</a>
-                <p>A site made to incorporate CRUD functionality where a user can create data, read data, add data, edit data and have it stored on a database.</p>
+                <div id="projectIconSect5">
+                    <i class="fa fa-code" aria-hidden="true"></i>
+                </div>
+                <div id="projectE">
+                    <h2>Locks and security database site</h2>
+                    <ul>
+                        <li><a href="https://locks-data-centric.herokuapp.com/">Click to view project</a></li>
+                        <p>A site made to incorporate CRUD functionality where a user can create data, read data, add data, edit data and have it stored on a database.</p>
+                    </ul>
+                </div>
             </section>
             <!--Section 6-->
             <section class="gridSection6">
-                <h3>Download CV</h3>
-                <a href="Assets\Patrick_Trollip_CV_Resume 2020.pdf">My CV</a>
-                <h3>Visit my github</h3>
-                <a href="https://github.com/Patoman90">My github</a>
+                <div id="projectIconSect6">
+                    <i class="fa fa-code" aria-hidden="true"></i>
+                </div>
+                <div id="projectF">
+                    <h2>Download CV</h2>
+                    <ul>
+                        <li><a href="Assets\Patrick_Trollip_CV_Resume 2020.pdf">Click to view CV</a></li>
+                        <li><a href="https://github.com/Patoman90">Visit my github</a></li>
+                    </ul>
+                </div>
             </section>
         </div>
     </main>
