Made some further changes to projects section.

--- a/skills.html
+++ b/skills.html
@@ -114,60 +114,96 @@
                     <ul>
                         <li>
                             <h3>Github version control</h3>
-                            <p></p>
+                            <p>
+                                A tool used for file and folder version control and sharing code for review and colaboration.
+                            </p>
                         </li>
                         <li>
                             <h3>Command Line interface</h3>
-                            <p></p>
+                            <p>
+                                A powerful text interface for excuting files and creating files and folders.
+                            </p>
                         </li>
                         <li>
                             <h3>Git Bash</h3>
-                            <p></p>
+                            <p>
+                                A text based interface for adding, commiting and pushing content to the master branch and main branch of the working
+                                tree.
+                            </p>
                         </li>
                         <li>
                             <h3>Heroku</h3>
-                            <p></p>
+                            <p>
+                                A site used with procfiles to host websites online.
+                            </p>
                         </li>
                         <li>
                             <h3>Windows OS</h3>
-                            <p></p>
+                            <p>
+                                The Microsoft operating system I have experience using. I am currently using Windows 10.
+                            </p>
                         </li>
                         <li>
                             <h3>Virtual Box</h3>
-                            <p></p>
+                            <p>
+                                A application used for testing apps and different versions and makes of operating systems. It is also used for testing out scripts
+                                and software before deploying the application on a live machine.
+                            </p>
                         </li>
                         <li>
                             <h3>Gitpod</h3>
-                            <p></p>
+                            <p>
+                                A online code editor I used for collaboration purposes.
+                            </p>
                         </li>
                         <li>
                             <h3>Visual Studio code editior</h3>
-                            <p></p>
+                            <p>
+                                The current virtual development environment code editor I have experience using.
+                            </p>
                         </li>
                         <li>
                             <h3>Js Bin</h3>
-                            <p></p>
+                            <p>
+                                A online code editor I sometimes use to quickly check some JS functionality.
+                            </p>
                         </li>
                         <li>
                             <h3>Chrome developer tools</h3>
-                            <p></p>
+                            <p>
+                                A online tool found in google chrome's browser that I can test changes to a website on a copy of thew source code.
+                            </p>
                         </li>
                         <li>
                             <h3>Comptia A+, security+ and network +</h3>
-                            <p></p>
+                            <p>
+                                Some of the materials I  researched and learnt about on my own via content creator Proffessor Messer on youtube to gain a better understanding on
+                                how computer networks work, cyber security threats and different general IT components and their parts physically and in a network. 
+                                These are just a few things I learnt via online resources in 2020.
+                            </p>
                         </li>
                         <li>
                             <h3>Schools and online learning</h3>
                             <h4>Diploma Code institute</h4>
-                            <p></p>
+                            <p>
+                                I earned my Diploma in Fullstack web development.
+                            </p>
                             <h4>Certificates IT career switch</h4>
-                            <p></p>
+                            <p>
+                                I am earning further certication in Fullstack web engineering via IT career switch.
+                            </p>
                             <h4>Courses Udemy</h4>
-                            <p></p>
+                            <p>
+                                I am doing some courses on my own in Angular and cyber security through Udemy.
+                            </p>
                             <h4>Freecodecamp.org</h4>
-                            <p></p>
+                            <p>
+                                I practice code and learn further skills for free on this resource.
+                            </p>
                             <h4>Zenva</h4>
-                            <p></p>
+                            <p>
+                                I am using this website to build javascript games in order to practice javascript.
+                            </p>
                         </li>
                     </ul>
                 </div>
