I finished adding the mobile phone media query styles for the pages.

--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
             <!--Section 1-->
             <section class="gridSection1">
                 <div id="projectIconSect1">
-                    <i id="projectIconSect1" class="fa fa-code" aria-hidden="true"></i>
+                    <i class="fa fa-code" aria-hidden="true"></i>
                 </div>
                 <div id="projectA">
                     <h2>Mixed messages Project</h2>
