Added responsiveness to buttons at nav bar and screen sizes. I made the link ti my cv in projects.html interactive.

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                 </div>
                 <div id="findMe">
                     <h3>Find me on LinkedIn</h3>
-                    <p><a href="https://www.linkedin.com/in/patrick-trollip-04765095/">My LinkedIn</a></p>
+                    <button class="navButton"><a class="navButton" href="https://www.linkedin.com/in/patrick-trollip-04765095/">My LinkedIn</a></button>
                 </div>
             </section>
             <!--Section 4-->
@@ -60,7 +60,7 @@
                 </div>
                 <div id="myGithub">
                     <h3>Github profile</h3>
-                    <p><a href="https://github.com/Patoman90">Patrick's github</a></p>
+                    <button class="navButton"><a class="navButton" href="https://github.com/Patoman90">Patrick's github</a></button>
                 </div>
             </section>
         </div>    
