--- a/projects.html
+++ b/projects.html
@@ -96,7 +96,7 @@
                 <div id="projectF">
                     <h2>Download CV</h2>
                     <ul>
-                        <li><a href="Assets\Patrick_Trollip_CV_Resume 2020.pdf">Click to view CV</a></li>
+                        <li><a id="grow" onmouseover="growLink()" href="Assets\Patrick_Trollip_CV_Resume 2020.pdf">Click to view CV</a></li>
                         <li><a href="https://github.com/Patoman90">Visit my github</a></li>
                     </ul>
                 </div>
