Fixed the buttons on the contact page so that they are more user friendly when clicked by moving the button element inside of the anchor

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                 </div>
                 <div id="findMe">
                     <h3>Find me on LinkedIn</h3>
-                    <button class="navButton"><a class="navButton" href="https://www.linkedin.com/in/patrick-trollip-04765095/">My LinkedIn</a></button>
+                    <a class="navButton" href="https://www.linkedin.com/in/patrick-trollip-04765095/"><button class="navButton">My LinkedIn</button></a>
                 </div>
             </section>
             <!--Section 4-->
@@ -60,7 +60,7 @@
                 </div>
                 <div id="myGithub">
                     <h3>Github profile</h3>
-                    <button class="navButton"><a class="navButton" href="https://github.com/Patoman90">Patrick's github</a></button>
+                    <a class="navButton" href="https://github.com/Patoman90"><button class="navButton">Patrick's github</button></a>
                 </div>
             </section>
         </div>    
