I updated my index.html paragraph and list items. I then addded a acknowledgement about the first code review I had

--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
             <section class="gridSection2">
                 <h3>Background:</h3>
                 <p>
-                    I am a graduate Fullstack web developer who studied at code institute. I have hands on experience using modern web technologies like
-                    <em>HTML5</em>, <em>CSS3</em> and <em>ECMA script versions 5 and 6</em>. I have covered the frontend, backend of web development. I strive to 
-                    continue to learn and land my first awesome job as a developer. I have experience colaborating with others on a project as well as following UX 
+                    I am a graduate Fullstack web developer who studied at code institute. I have hands on experience using modern web technologies like the following.
+                    I strive to continue to learn and land my first awesome job as a developer. I have experience colaborating with others on a project as well as following UX 
                     instructions to build the desired websites. My favorite language is Javascript and my favourite web development area is on the front end.
                     I am a creative person who is aiming to write clean and readable code that follows convention and good practices while striving to build secure
                     websites that are as accessible to as many people as possible to help maximize business and positive user experiences.
@@ -49,16 +48,21 @@
                 <ul>
                     <li>HTML5</li>
                     <li>CSS3</li>
+                    <li>Bootstrap4</li>
+                    <li>Font awesome</li>
                     <li>Javascript</li>
+                    <li>Angular</li>
+                    <li>Jquery</li>
+                    <li>Nodejs</li>
                     <li>Python3</li>
                     <li>MongoDB</li>
-                    <li>SQL</li>
-                    <li>Nodejs</li>
-                    <li>Bootstrap4</li>
-                    <li>Jquery</li>
+                    <li>SQL Lite</li>
+                    <li>Travis and Mocha testing suites</li>
                     <li>Visual studio code editor</li>
                     <li>Heroku</li>
-                    <li>Travis</li>
+                    <li>Git Hub pages</li>
+                    <li>Git Bash</li>
+                    <li>Command line</li>
                     <li>AWS S3</li>
                 </ul>
             </section>
